packages/cashc/test/compiler/TypeError/ternary_condition_not_bool.cash
contract Ternary() {
    function spend(int x) {
        int result = x ? 1 : 2;
        require(result == 1);
    }
}
